UI Update : Fixed layout issue.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,14 +9,31 @@ body {
   font-size:18px;
   font-family:sans-serif;
   color:#666;
+  min-width:950px;
 }
 
 .wrapper {
   display:grid;
+  grid-template-columns:340px 1fr 340px;
+  grid-template-rows:auto;
+  grid-template-areas:
+    ". date_view .";
+  height:100%;
+  min-height:100%;
+  width:100%;
+  min-width:100%;
+  padding:0;
+  margin:0;
+  top:0px;
+  z-index:0;
+}
+
+.sub_wrapper {
+  display:grid;
   grid-template-columns:300px 40px 1fr 40px 300px;
   grid-template-rows:auto;
   grid-template-areas:
-    ". btn_left date_view btn_right date_header";
+    ". btn_left . btn_right date_header";
   height:100%;
   min-height:100%;
   width:100%;
@@ -25,11 +42,12 @@ body {
   top:0px;
   margin:0;
   padding:0;
-  z-index:0;
+  z-index:1;
 }
 
 .date_header {
   display:block;
+  position:fixed;
   top:0px;
   right:0px;
   height:200px;
@@ -51,7 +69,6 @@ body {
   padding:0;
   background-color:#666;
   grid-area:date_view;
-  overflow-y:scroll;
 }
 
 .t_block:first-of-type {
@@ -80,17 +97,28 @@ body {
   padding-top:15px;
 }
 
+button:hover {
+  cursor:pointer;
+}
+
 .btn_left {
+  position:fixed;
+  top:40%;
+  left:300px;
   text-align:center;
   grid-area:btn_left;
 }
 
 .btn_right {
+  position:fixed;
+  top:40%;
+  right:300px;
   text-align:center;
   grid-area:btn_right;
 }
 
 .fa:hover {
+  cursor:pointer;
   color:lightblue;
   transition:0.4s;
 }
